--- a/DevelopStock/UI/webside/index.css
+++ b/DevelopStock/UI/webside/index.css
@@ -1,3 +1,39 @@
 .mydiv{
     width: 10px;color:green
 }
+#count{
+    background-color: aqua
+}
+#cell{
+    background-color: blueviolet
+}
+
+* { padding: 0; margin: 0; }
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    border: 1px solid #c0c0c0;
+}
+
+th,td {
+    border: 1px solid #d0d0d0;
+    color: #404060;
+    padding: 10px;
+}
+
+th {
+    background-color: #09c;
+    font: bold 16px "微软雅黑";
+    color: #fff;
+}
+
+td {
+    font: 14px "微软雅黑";
+}
+tbody tr {
+    background-color: #f0f0f0;
+}
+tbody tr:hover {
+    cursor: pointer;
+    background-color: #fafafa;
+}
