--- a/DevelopStock/tools/MinDataUi.ui
+++ b/DevelopStock/tools/MinDataUi.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>802</width>
-    <height>614</height>
+    <width>839</width>
+    <height>665</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,7 +39,7 @@
     <rect>
      <x>100</x>
      <y>30</y>
-     <width>311</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -71,33 +71,12 @@
     <string>下载时间：</string>
    </property>
   </widget>
-  <widget class="QLabel" name="zhi">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>100</y>
-     <width>31</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>至</string>
-   </property>
-  </widget>
   <widget class="QDateEdit" name="dateEdit">
    <property name="geometry">
     <rect>
      <x>99</x>
      <y>110</y>
-     <width>141</width>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -111,6 +90,13 @@
    </property>
    <property name="calendarPopup">
     <bool>true</bool>
+   </property>
+   <property name="date">
+    <date>
+     <year>1999</year>
+     <month>12</month>
+     <day>31</day>
+    </date>
    </property>
   </widget>
   <widget class="QLabel" name="bclj">
@@ -139,7 +125,7 @@
     <rect>
      <x>100</x>
      <y>70</y>
-     <width>211</width>
+     <width>251</width>
      <height>31</height>
     </rect>
    </property>
@@ -153,33 +139,12 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="ljxz">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>70</y>
-     <width>91</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>路径选择</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="xzlsFs">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>140</y>
-     <width>401</width>
+     <width>441</width>
      <height>31</height>
     </rect>
    </property>
@@ -195,55 +160,13 @@
     <string>下载历史分时</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="xzdtfs">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>170</y>
-     <width>401</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>下载当天分时</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="xzlsFs_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>200</y>
-     <width>401</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>多个股票下载历史分时</string>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>10</y>
-     <width>421</width>
-     <height>591</height>
+     <width>471</width>
+     <height>651</height>
     </rect>
    </property>
    <property name="font">
@@ -261,18 +184,18 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>230</y>
-      <width>401</width>
-      <height>351</height>
+      <y>240</y>
+      <width>441</width>
+      <height>401</height>
      </rect>
     </property>
    </widget>
    <widget class="QDateEdit" name="dateEdit_2">
     <property name="geometry">
      <rect>
-      <x>269</x>
+      <x>290</x>
       <y>100</y>
-      <width>141</width>
+      <width>161</width>
       <height>31</height>
      </rect>
     </property>
@@ -288,14 +211,111 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="zhi">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>90</y>
+      <width>31</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Aharoni</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>至</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ljxz">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>60</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Aharoni</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>路径选择</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="xzdtfs">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>200</y>
+      <width>441</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Aharoni</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>下载当天分时</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="xzlsFs_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>160</y>
+      <width>441</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Aharoni</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>多个股票下载历史分时</string>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>20</y>
+      <width>171</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>24</number>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>470</x>
      <y>10</y>
      <width>351</width>
-     <height>591</height>
+     <height>651</height>
     </rect>
    </property>
    <property name="font">
@@ -409,20 +429,29 @@
      <string>查询</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>580</y>
+      <width>331</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <zorder>groupBox</zorder>
   <zorder>groupBox_2</zorder>
   <zorder>gpdm</zorder>
   <zorder>gpdmEdit</zorder>
   <zorder>xzsj</zorder>
-  <zorder>zhi</zorder>
   <zorder>dateEdit</zorder>
   <zorder>bclj</zorder>
   <zorder>bclj_2</zorder>
-  <zorder>ljxz</zorder>
   <zorder>xzlsFs</zorder>
-  <zorder>xzdtfs</zorder>
-  <zorder>xzlsFs_2</zorder>
  </widget>
  <resources/>
  <connections/>
