--- a/DevelopStock/tools/MinDataUi.ui
+++ b/DevelopStock/tools/MinDataUi.ui
@@ -6,126 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>839</width>
-    <height>665</height>
+    <width>1116</width>
+    <height>685</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>股票分时交易数据提取工具</string>
   </property>
-  <widget class="QLabel" name="gpdm">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>30</y>
-     <width>91</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>股票代码：</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="gpdmEdit">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>30</y>
-     <width>161</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial</family>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-  </widget>
-  <widget class="QLabel" name="xzsj">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>100</y>
-     <width>91</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>下载时间：</string>
-   </property>
-  </widget>
-  <widget class="QDateEdit" name="dateEdit">
-   <property name="geometry">
-    <rect>
-     <x>99</x>
-     <y>110</y>
-     <width>161</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Arial</family>
-     <pointsize>12</pointsize>
-     <weight>50</weight>
-     <bold>false</bold>
-    </font>
-   </property>
-   <property name="calendarPopup">
-    <bool>true</bool>
-   </property>
-   <property name="date">
-    <date>
-     <year>1999</year>
-     <month>12</month>
-     <day>31</day>
-    </date>
-   </property>
-  </widget>
-  <widget class="QLabel" name="bclj">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>60</y>
-     <width>91</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>保存路径：</string>
-   </property>
-  </widget>
   <widget class="QLineEdit" name="bclj_2">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>70</y>
-     <width>251</width>
+     <x>490</x>
+     <y>20</y>
+     <width>501</width>
      <height>31</height>
     </rect>
    </property>
@@ -139,34 +32,13 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="xzlsFs">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>140</y>
-     <width>441</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Aharoni</family>
-     <pointsize>12</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="text">
-    <string>下载历史分时</string>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>10</x>
      <y>10</y>
      <width>471</width>
-     <height>651</height>
+     <height>201</height>
     </rect>
    </property>
    <property name="font">
@@ -180,21 +52,11 @@
    <property name="title">
     <string>下载数据</string>
    </property>
-   <widget class="QListView" name="listView_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>240</y>
-      <width>441</width>
-      <height>401</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QDateEdit" name="dateEdit_2">
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>100</y>
+      <y>60</y>
       <width>161</width>
       <height>31</height>
      </rect>
@@ -215,7 +77,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>90</y>
+      <y>50</y>
       <width>31</width>
       <height>41</height>
      </rect>
@@ -232,32 +94,11 @@
      <string>至</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="ljxz">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>60</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Aharoni</family>
-      <pointsize>12</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>路径选择</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="xzdtfs">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>200</y>
+      <y>130</y>
       <width>441</width>
       <height>31</height>
      </rect>
@@ -278,7 +119,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
+      <y>100</y>
       <width>441</width>
       <height>31</height>
      </rect>
@@ -292,30 +133,107 @@
      </font>
     </property>
     <property name="text">
-     <string>多个股票下载历史分时</string>
+     <string>下载历史分时</string>
     </property>
    </widget>
    <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>270</x>
-      <y>20</y>
-      <width>171</width>
-      <height>23</height>
+      <x>10</x>
+      <y>162</y>
+      <width>441</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
     </property>
     <property name="value">
      <number>24</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="xzlsFs_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>441</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Aharoni</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>编辑股票代码文件</string>
+    </property>
+   </widget>
+   <widget class="QDateEdit" name="dateEdit">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>60</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>12</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="calendarPopup">
+     <bool>true</bool>
+    </property>
+    <property name="date">
+     <date>
+      <year>1999</year>
+      <month>12</month>
+      <day>31</day>
+     </date>
+    </property>
+   </widget>
+   <widget class="QLabel" name="xzsj">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>50</y>
+      <width>91</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Aharoni</family>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>下载时间：</string>
     </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>10</y>
-     <width>351</width>
-     <height>651</height>
+     <x>10</x>
+     <y>210</y>
+     <width>471</width>
+     <height>471</height>
     </rect>
    </property>
    <property name="font">
@@ -329,47 +247,37 @@
    <property name="title">
     <string>合并数据</string>
    </property>
-   <widget class="QListView" name="listView">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>80</y>
-      <width>331</width>
-      <height>451</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="dqlj">
+   <widget class="QPushButton" name="dqljwj_2">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>201</width>
+      <width>151</width>
       <height>31</height>
      </rect>
     </property>
-    <property name="readOnly">
-     <bool>true</bool>
+    <property name="text">
+     <string>查询</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="dqljwj">
+   <widget class="QPushButton" name="hbbb">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>20</y>
+      <x>290</x>
+      <y>430</y>
       <width>121</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>选择路径</string>
+     <string>合并表格</string>
     </property>
    </widget>
    <widget class="QLabel" name="hbgpCode">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>540</y>
+      <x>10</x>
+      <y>420</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -377,7 +285,7 @@
     <property name="font">
      <font>
       <family>Aharoni</family>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -389,9 +297,9 @@
    <widget class="QLineEdit" name="gpdmHb">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>540</y>
-      <width>113</width>
+      <x>90</x>
+      <y>430</y>
+      <width>181</width>
       <height>31</height>
      </rect>
     </property>
@@ -403,55 +311,101 @@
      </font>
     </property>
    </widget>
-   <widget class="QPushButton" name="hbbb">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>540</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>合并表格</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="dqljwj_2">
+   <widget class="QListView" name="listView">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>50</y>
-      <width>331</width>
+      <y>60</y>
+      <width>441</width>
+      <height>361</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="progressBar_2">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>20</y>
+      <width>281</width>
       <height>31</height>
      </rect>
     </property>
-    <property name="text">
-     <string>查询</string>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>12</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
     </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>580</y>
-      <width>331</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
+    <property name="value">
+     <number>24</number>
     </property>
    </widget>
   </widget>
+  <widget class="QPushButton" name="ljxz">
+   <property name="geometry">
+    <rect>
+     <x>990</x>
+     <y>20</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Aharoni</family>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>存储路径</string>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_3">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>59</y>
+     <width>621</width>
+     <height>621</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="title">
+    <string>信息</string>
+   </property>
+   <widget class="QListView" name="listView_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>601</width>
+      <height>571</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Arial</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+   </widget>
+  </widget>
+  <zorder>groupBox_3</zorder>
   <zorder>groupBox</zorder>
   <zorder>groupBox_2</zorder>
-  <zorder>gpdm</zorder>
-  <zorder>gpdmEdit</zorder>
-  <zorder>xzsj</zorder>
-  <zorder>dateEdit</zorder>
-  <zorder>bclj</zorder>
   <zorder>bclj_2</zorder>
-  <zorder>xzlsFs</zorder>
+  <zorder>ljxz</zorder>
  </widget>
  <resources/>
  <connections/>
