add ui for UI_UserWeChatUser
add AcountWorkThx.xlsm
update AcountWorkThx code

--- a/DevelopStock/CommunicationTool/UI_UseWeChat.ui
+++ b/DevelopStock/CommunicationTool/UI_UseWeChat.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>开始发送</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pBtn_Stop">
@@ -36,7 +36,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>停止发送</string>
    </property>
   </widget>
   <widget class="QListView" name="listView">
